Fixed margin login_signup.html (button not centered).

--- a/css/form.css
+++ b/css/form.css
@@ -1,11 +1,10 @@
 /*  consists of styles for various forms */
 
 .form-list {
-	width: 65%;
+	width: 30%;
 }
 
 .forms {
-	width: 55%;
 	background-color: rgb(247, 244, 244);
 	border: solid 1pt rgb(218, 218, 218);
 	border-radius: 15px;
@@ -13,19 +12,16 @@
 	box-shadow: 0 1 3rem rgb(179, 177, 177);
 }
 
-/* #login-form {
-	
-} */
-
 .input-fields {
 	font-size: 14px;
 	color: gray;
 	padding: 5px;
+	margin-bottom: 16px;
 }
 
 .input-fields input {
 	height: 25px;
-	width: 50%;
+	width: 100%;
 }
 
 .buttons {
