--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ nav {
 
 .flex-container {
 	display: flex;
+	justify-content: center;
 	padding-bottom: 24px;
 }
 
